// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifExpertApp debe de mostrar una lista de categorías 1`] = `
<Fragment>
  <h2>
      GifExpertApp 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="autos"
    key="autos"
  />
  <GifGrid
    category="cartas"
    key="cartas"
  />
</Fragment>
`;

exports[`Pruebas en GifExpertApp debe mostrar el componente correctamente 1`] = `
<Fragment>
  <h2>
      GifExpertApp 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;
